# a-json-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NEWS.md  NOTICE
.changes/: 0.0.1.md
include/a-json-library/: ajson.h
include/a-json-library/impl/: ajson.h
src/: ajson.c
tests/: CMakeLists.txt  build.sh
tests/src/: test_ajson.c
